minor misalignment fixes

--- a/src/scss/pages.sass
+++ b/src/scss/pages.sass
@@ -5,14 +5,16 @@ html, body
   padding: 0
   margin: 0
   scroll-behavior: smooth
+  height: 100svh
+  width: 100svw
+  overflow-x: hidden
 
 body
   background: $black
-  height: 100lvh
-  overflow: hidden
+  height: 100svh
 
 main
-  height: 100lvh
+  height: 100svh
   overflow-y: scroll
   scroll-behavior: smooth
   box-sizing: border-box
