--- a/src/scss/portfolio.sass
+++ b/src/scss/portfolio.sass
@@ -6,12 +6,12 @@ html, body
   margin: 0
   scroll-behavior: smooth
   height: 100svh
-  width: 100swv
+  width: 100svw
+  overflow-x: hidden
 
 body
   background: $black
   height: 100svh
-  overflow: hidden
 
 main
   height: 100svh
