--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -5,15 +5,16 @@ html, body
   padding: 0
   margin: 0
   scroll-behavior: smooth
+  height: 100svh
+  width: 100svw
+  overflow-x: hidden
 
 body
   background: $white
-  height: 100lvh
-  overflow: hidden
+  height: 100svh
 
 main
-  height: 100lvh
-  overflow-y: scroll
+  height: 100svh
   scroll-snap-type: y mandatory
   scroll-snap-stop: always
   scroll-behavior: smooth
@@ -21,7 +22,7 @@ main
 .screen
   display: flex
   box-sizing: border-box
-  height: 100lvh
+  height: 100svh
   padding: 40px 80px
   flex-direction: column
   justify-content: center
